--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -9,15 +9,287 @@
 </head>
 <body>
     <header class="header">
-        
+        <div class="container">
+            <div class="header__wrap">
+                <div class="logo">
+                    <img src="./img/logo.svg" alt="Логотип" class="logo__img">
+                </div>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Акции</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Мероприятия</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Тест-Драйв</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Где купить</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Обучение</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">FPS</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">FAQ</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__buttons">
+                    <a href="#" class="button button_response">Обратная связь</a>
+                    <a href="#" class="button button_login">Вход</a>
+                </div>
+            </div>
+        </div>
     </header>
+    <aside class="aside">
+        <div class="aside__top">
+            <a href="#" class="button aside__camera">
+                <svg height="19" width="22">
+                    <use height="19" width="22" xlink:href="./img/icons.svg#camera"></use>
+                </svg>
+            </a>
+            <a href="#" class="button aside__cart">
+                <svg height="20" width="20">
+                    <use height="20" width="20" xlink:href="./img/icons.svg#cart"></use>
+                </svg>
+                <span>Купить</span>
+            </a>
+        </div>
+        <div class="aside__body">
+            <a href="#" class="aside__link active">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+            <a href="#" class="aside__link">
+                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__bullet"></span>
+            </a>
+        </div>
+    </aside>
     <main class="main">
-
+        <section class="hero">
+            <picture class="hero__bg">
+                <source srcset="./img/hero_bg.webp" type="image/webp">
+                <img src="./img/hero_bg.jpg" alt="FUJIFILM X-S10">
+            </picture>
+            <div class="container">
+                <div class="hero__container">
+                    <img src="./img/x-s10-logo 1.png" alt="Лого X-S10" class="hero__logo">
+                    <span class="section__title hero__agit">Ваш стиль <br>наш цвет</span>
+                    <h1 class="hero__title">Универсальная камера <br> для фото и видеосъемки</h1>
+                    <span class="section__subtitle hero__price">
+                        Рекомендованная розничная цена <br>
+                        от <span class="hero__price-num">85 999 </span><span class="hero__price-rub">₽</span>
+                    </span>
+                    <div class="hero__row">
+                        <a href="#" class="button button_buy">
+                            <svg height="28" width="29">
+                                <use xlink:href="./img/icons.svg#cart"></use>
+                            </svg>
+                            где купить</a>
+                        <a href="#" class="button button_testdrive">
+                            <svg height="23" width="27">
+                                <use height="23" width="27" xlink:href="./img/icons.svg#camera"></use>
+                            </svg>
+                            Тест-драйв</a>
+                        <div class="hero__socials">
+                            <span class="hero__socials-label">наши соц. сети</span>
+                            <div class="hero__socials-row">
+                                <a href="#" class="hero__socials-link">
+                                    <svg height="20" width="30">
+                                        <use height="20" width="30" xlink:href="./img/icons.svg#vk-stroke"></use>
+                                    </svg>
+                                </a>
+                                <a href="#" class="hero__socials-link">
+                                    <svg height="24" width="24">
+                                        <use height="24" width="24" xlink:href="./img/icons.svg#insta-stroke"></use>
+                                    </svg>
+                                </a>
+                                <a href="#" class="hero__socials-link">
+                                    <svg height="25" width="15">
+                                        <use height="25" width="15" xlink:href="./img/icons.svg#fb-stroke"></use>
+                                    </svg>
+                                </a>
+                                <a href="#" class="hero__socials-link">
+                                    <svg height="30" width="31">
+                                        <use height="30" width="31" xlink:href="./img/icons.svg#yt-stroke"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="hybrid">
+            <div class="container">
+                <div class="column__container hybrid__wrapper">
+                    <div class="column hybrid__col">
+                        <p class="text">FUJIFILM X-S10 универсальная камера для фотографии и видеосъемки, сочетающая производительность флагмана, встроенную матричную стабилизацию до 6-стопов и легкий, компактный корпус с привычным управлением.</p>
+                        <picture class="hybrid__img hybrid__img_left">
+                            <source srcset="./img/hybrid-img_1.webp" type="image/webp">
+                            <img src="./img/hybrid-img_1.jpg" alt="Фото камеры">
+                        </picture>
+                        <p class="text text_left text_mt50">Камера отлично подойдёт для продвинутых фотографов, а также и для тех, кто стремиться улучшить свои навыки в фотографии.</p>
+                        <ul class="list hybrid__list">
+                            <li class="list__item text">
+                                <span class="list__accent">18 режимов</span> моделирования пленки
+                            </li>
+                            <li class="list__item text">
+                                <span class="list__accent">Новый</span> авто режим и управление PASM
+                            </li>
+                            <li class="list__item text">
+                                <span class="list__accent">Матричная стабилизация</span> изображения до 6 стопов
+                            </li>
+                            <li class="list__item text">
+                                26 Мп матрица APS-C <span class="list__accent">X-Trans CMOS 4</span> с обратной засветкой
+                            </li>
+                            <li class="list__item text">
+                                Алгоритмы работы <span class="list__accent">автофокуса от флагмана</span> X-T4
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column hybrid__col">
+                        <p class="text"> Придумывайте и находите сюжеты, а эта камера поможет сделать кадры с красивыми цветами!</p>
+                        <h2 class="section__title hybrid__title">FUJIFILM X-S10 <br>
+                            — НАСТОЯЩИЙ ГИБРИД</h2>
+                        <span class="section__subtitle hybrid__subtitle">Путешествия, события, творчество — ваши лучшие фотографии</span>
+                        <p class="text text_mt30"> <img class="float-img float-img_left" src="./img/float-img_1.png" alt="Изображение в тексте"> X-S10 — это беззеркальный фотоаппарат вдохновляющий на съемку. Такую компактную камеру удобно брать с собой, при этом крупный, эргономичный хват позволит с комфортом снимать даже с большими объективами. Весь опыт накопленный компанией Fujifilm более чем за 85 лет производства фотопленки и работы с цветом реализован в фотокамере X-S10. Делайте снимки высокого качества с режимами моделирования пленки, высоким диапазоном чувствительности ISO в полностью ручном или автоматическом режиме управления. Для реализации любых творческих задач доступно более 35 сменных моделей объективов Fujinon для байонета Х-Моunt.</p>
+                        <picture class="hybrid__img hybrid__img_right">
+                            <source srcset="./img/hybrid-img_2.webp" type="image/webp">
+                            <img src="./img/hybrid-img_2.jpg" alt="Фото камеры">
+                        </picture>
+                    </div>            
+                </div>
+            </div>
+        </section>
+        <section class="author">
+            <picture class="author__bg">
+                <source srcset="./img/author-bg.webp" type="image/webp">
+                    <img src="./img/author-bg.jpg" alt="Фон">
+            </picture>
+            <div class="container">
+                <h2 class="section__small-title author__title">Блоги, кино, клипы — вы автор</h2>
+                <p class="text"> <img class="float-img float-img_left float-img_mb30" src="./img/float-img_2.png" alt="Изображение в тексте"> X-S10 разрабатывалась с учетом потребностей продвинутых видеографов. Встроенная система матричной стабилизации, высокое качество видео 4К, которое преобразуется из 6К и потрясающая цветопередача Fujifilm. Поворотный сенсорный дисплей удобен для влогов, а расширенные функции видео позволят снимать клипы, интервью или даже художественные фильмы. Для продолжительной записи видео внутри камеры установлена система рассеивания тепла, которая существенно минимизирует перегрев.</p>
+                <div class="column__container">
+                    <div class="column">
+                        <ul class="list">
+                            <li class="list__item text">
+                                4K 30 кадров в секунду в форматах <span class="list__accent">DCI/UHD</span>
+                            </li>
+                            <li class="list__item text">
+                                <span class="list__accent">Full HD  240 кадров</span> в секунду для 10x замедления 
+                            </li>
+                            <li class="list__item text">
+                                Режим <span class="list__accent">матричной и электронной</span> стабилизации
+                            </li>
+                            <li class="list__item text">
+                                <span class="list__accent">Поворотный на 180 градусов</span> сенсорный дисплей
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <ul class="list">
+                            <li class="list__item text">
+                                Режим моделирования кинопленки <span class="list__accent">Eterna Bleach Bypass</span>
+                            </li>
+                            <li class="list__item text">
+                                Запись <span class="list__accent">F-log</span> и вывод на внешний рекордер <span class="list__accent">10 бит 4:2:2</span>
+                            </li>
+                            <li class="list__item text">
+                                Разъемы 3.5мм для микрофона и USB-C для наушников
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="slider">
+            <h2 class="section__title slider__title section__title_tac">ЦВЕТ ДЛЯ ФОТО И ВИДЕО</h2>
+            <div class="slider__body js-slider-color">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide slider__item">
+                        <picture class="slider__img">
+                            <source srcset="" type="image/webp">
+                            <img src="./img/slider/slide (1).jpg" alt="Фото в слайдере">
+                        </picture>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <picture class="slider__img">
+                            <source srcset="" type="image/webp">
+                            <img src="./img/slider/slide (2).jpg" alt="Фото в слайдере">
+                        </picture>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <picture class="slider__img">
+                            <source srcset="" type="image/webp">
+                            <img src="./img/slider/slide (3).jpg" alt="Фото в слайдере">
+                        </picture>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <picture class="slider__img">
+                            <source srcset="" type="image/webp">
+                            <img src="./img/slider/slide (4).jpg" alt="Фото в слайдере">
+                        </picture>
+                    </div>
+                </div>
+                <div class="slider__control-container">
+                    <button class="slider__control slider__control_prev">
+                        <svg height="100" width="40">
+                            <use height="100" width="40" xlink:href="./img/icons.svg#slider-arrow"></use>
+                        </svg>
+                    </button>
+                    <button class="slider__control slider__control_next">
+                        <svg height="100" width="40">
+                            <use height="100" width="40" xlink:href="./img/icons.svg#slider-arrow"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
 
     </footer>
 
     <script src="./js/jQuery.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 </body>
 </html>
