--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -82,17 +82,18 @@
     </div>
     <aside class="aside">
         <div class="aside__top">
-            <a href="#" class="button aside__camera">
+            <button class="button aside__camera js-open-popup-testdrive">
                 <svg height="19" width="22">
                     <use height="19" width="22" xlink:href="./img/icons.svg#camera"></use>
                 </svg>
-            </a>
-            <a href="#" class="button aside__cart">
+                <span>Тест-Драйв</span>
+            </button>
+            <button class="button aside__cart js-open-popup-buy">
                 <svg height="20" width="20">
                     <use height="20" width="20" xlink:href="./img/icons.svg#cart"></use>
                 </svg>
                 <span>Купить</span>
-            </a>
+            </button>
         </div>
         <div class="aside__body">
             <a href="#" class="aside__link active">
@@ -145,7 +146,7 @@
             </picture>
             <div class="container">
                 <div class="hero__container">
-                    <img loading="lazy" src="./img/x-s10-logo 1.png" alt="Лого X-S10" class="hero__logo">
+                    <img loading="lazy" src="./img/x-s10-logo.png" alt="Лого X-S10" class="hero__logo">
                     <span class="section__title hero__agit">Ваш стиль <br>наш цвет</span>
                     <h1 class="hero__title">Универсальная камера <br> для фото и видеосъемки</h1>
                     <span class="section__subtitle hero__price">
@@ -213,12 +214,12 @@
                             </picture>
                         </div>
                         <div class="column">
-                            <article class="text-block">
+                            <div class="text-block">
                                 <h2 class="section__title hybrid__title">FUJIFILM X-S10 <br>
                                     — НАСТОЯЩИЙ ГИБРИД</h2>
                                 <h3 class="section__subtitle hybrid__subtitle">Путешествия, события, творчество — ваши лучшие фотографии</h3>
                                 <p class="text text_mt40"> <img loading="lazy" class="float-img float-img_left" src="./img/float-img_1.png" alt="Изображение в тексте"> X-S10 — это беззеркальный фотоаппарат вдохновляющий на съемку. Такую компактную камеру удобно брать с собой, при этом крупный, эргономичный хват позволит с комфортом снимать даже с большими объективами. Весь опыт накопленный компанией Fujifilm более чем за 85 лет производства фотопленки и работы с цветом реализован в фотокамере X-S10. Делайте снимки высокого качества с режимами моделирования пленки, высоким диапазоном чувствительности ISO в полностью ручном или автоматическом режиме управления. Для реализации любых творческих задач доступно более 35 сменных моделей объективов Fujinon для байонета Х-Моunt.</p>  
-                            </article>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -526,8 +527,8 @@
                     <div class="row row_mt50 row_end row_between">
                         <div class="column ">
                             <video playsinline muted loop autoplay preload="metadata" class="column__video">
-                                <source src="./video/Tracking AF.webm" type="video/webm">
-                                <source src="./video/Tracking AF.mp4" type="video/mp4">
+                                <source src="./video/Tracking-AF.webm" type="video/webm">
+                                <source src="./video/Tracking-AF.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="column column_medium">
@@ -552,10 +553,10 @@
                     <div class="row__container">
                         <div class="row">
                             <div class="column column_nomutations">
-                                <article class="text-block">
+                                <div class="text-block">
                                     <h2 class="section__title js-moving-img-target">КОРПУС — МАГНИВЫЙ, ЛЕГКИЙ И ПРОЧНЫЙ</h2>
                                     <p class="text text_mt50">Благодаря своим профессиональным функциям и дизайну, X-S10 - это камера, которую вы захотите всегда брать собой. Ее прочная, легкая конструкция всего 465г., красивый дизайн и фирменная эргономика поддерживают репутацию камер серии FUJIFILM X как икон стиля, так и надежных фотографических инструментов.</p>
-                                </article>
+                                </div>
                             </div>
                             <div class="column column_nomutations column_big js-moving-img-home">
                                 <picture class="filming__img corpus__img ml-30 js-moving-img">
@@ -779,55 +780,55 @@
                 <h2 class="section__title section__title_tac">ОБЗОРЫ</h2>
                 <div class="reviews__body mt-50">
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="reviews__item">
-                        <video preload="metadata" controls preload="auto">
+                        <video controls preload="auto">
                             <source src="./video/monochrome_color.webm" type="video/webm">
                             <source src="./video/monochrome_color.mp4" type="video/mp4">
                         </video>
@@ -960,7 +961,7 @@
                                 <img loading="lazy" class="footer__logo" src="./img/logo-black.png" alt="Fujifilm">
                             </div>
                             <div class="column">
-                                <img loading="lazy" class="footer__logo" src="./img/x-s10-logo 1.png" alt="Лого камеры">
+                                <img loading="lazy" class="footer__logo" src="./img/x-s10-logo.png" alt="Лого камеры">
                             </div>
                         </div>
                         <h2 class="footer__title">ваш стиль. наш&nbsp;цвет.</h2>
