--- a/2u/index.html
+++ b/2u/index.html
@@ -115,7 +115,7 @@
                         </td>
                     </tr>
                 </table>
-                <table class="allah" align="center" background="https://belshed.github.io/2u/img/background-church.jpg" cellpadding="0" cellspacing="0">
+                <table class="allah" align="center" background="https://belshed.github.io/2u/img/background-church.png" cellpadding="0" cellspacing="0">
                     <tr>
                         <td align="center">
                             <p class="allah__text">May Allah bring lots of happiness and blessings to your lives. Happy Ramadan Kareem! Don't forget to order something for your family in ToYou app.</p>
